docs/api/qiskit/0.35/qiskit.transpiler.passes.LinearFunctionsToPermutations.mdx
---
title: LinearFunctionsToPermutations (v0.35)
description: API reference for qiskit.transpiler.passes.LinearFunctionsToPermutations in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.LinearFunctionsToPermutations
---

# LinearFunctionsToPermutations

<Class id="qiskit.transpiler.passes.LinearFunctionsToPermutations" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/transpiler/passes/synthesis/linear_functions_synthesis.py" signature="LinearFunctionsToPermutations(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.TransformationPass`

  Promotes linear functions to permutations when possible.

  ## Methods

  <span id="qiskit-transpiler-passes-linearfunctionstopermutations-name" />

  ### name

  <Function id="qiskit.transpiler.passes.LinearFunctionsToPermutations.name" signature="LinearFunctionsToPermutations.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-linearfunctionstopermutations-run" />

  ### run

  <Function id="qiskit.transpiler.passes.LinearFunctionsToPermutations.run" signature="LinearFunctionsToPermutations.run(dag)">
    Run the LinearFunctionsToPermutations pass on dag. :type dag: `DAGCircuit` :param dag: input dag.

    **Return type**

    `DAGCircuit`

    **Returns**

    Output dag with LinearFunctions synthesized.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.LinearFunctionsToPermutations.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.LinearFunctionsToPermutations.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

